# lucas

./: .gitignore  Cargo.toml
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  error.rs  lib.rs
crates/embedding/: Cargo.toml
crates/embedding/src/: embedder.rs  error.rs  fastembed.rs  lib.rs
crates/lucas-core/: Cargo.toml
crates/lucas-core/src/: lib.rs
crates/prompt/: Cargo.toml
crates/prompt/src/: builder.rs  lib.rs  prompt.rs
crates/prompt/src/apis/: mod.rs
crates/provider/: Cargo.toml
crates/provider/src/: error.rs  lib.rs  message.rs
crates/provider/src/providers/: anthropic.rs  mod.rs  openai.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tools/src/edit/: mod.rs
docs/: tech-stack.md
