
[workspace]
resolver = "3"
members = [
    "crates/agent",
    "crates/embedding",
    "crates/prompt",
    "crates/provider",
    "crates/tools",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"

[workspace.dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
markdown-frontmatter = "0.5.1"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = "1"
tokio-test = "0.4.5"